@@ -1,8 +1,8 @@
 Package: eRm
 Type: Package
 Title: Extended Rasch Modeling
-Version: 1.0-0
-Date: 2019-06-05
+Version: 1.0-1
+Date: 2020-02-27
 Authors@R: c(person(given="Patrick", family="Mair", email="mair@fas.harvard.edu", role=c("cre","aut")),
              person(given="Reinhold", family="Hatzinger", role="aut"),
              person(given=c("Marco", "J."), family="Maier", email="marco.maier@wu.ac.at", role="aut"),
@@ -10,7 +10,7 @@ Authors@R: c(person(given="Patrick", family="Mair", email="mair@fas.harvard.edu"
 			 person(given="Rudolf", family="Debelak", email="rudolf.debelak@psychologie.uzh.ch", role="ctb"))
 Description: Fits Rasch models (RM), linear logistic test models (LLTM), rating scale model (RSM), linear rating scale models (LRSM), partial credit models (PCM), and linear partial credit models (LPCM).  Missing values are allowed in the data matrix.  Additional features are the ML estimation of the person parameters, Andersen's LR-test, item-specific Wald test, Martin-Loef-Test, nonparametric Monte-Carlo Tests, itemfit and personfit statistics including infit and outfit measures, ICC and other plots, automated stepwise item elimination, simulation module for various binary data matrices.
 License: GPL-3
-Imports: graphics, grDevices, stats, methods, MASS, splines, Matrix, lattice
+Imports: graphics, grDevices, stats, methods, MASS, splines, Matrix, lattice, colorspace, psych
 Depends: R (>= 3.5.0)
 Encoding: UTF-8
 LazyData: yes
